--- a/package.json
+++ b/package.json
@@ -1,52 +1,54 @@
 {
-  "name": "a11y",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@bdenzer/react-modal": "^0.6.2",
-    "@charlietango/use-focus-trap": "^1.2.10",
-    "@date-io/date-fns": "^2.6.2",
-    "@material-ui/core": "^4.10.1",
-    "@material-ui/pickers": "^3.2.10",
-    "@reecelucas/react-datepicker": "^2.0.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-modal": "^3.10.5",
-    "focus-trap-react": "^6.0.0",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-hook-form": "^5.7.2",
-    "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "react-axe": "^3.4.1"
-  }
+	"name": "a11y",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@bdenzer/react-modal": "^0.6.2",
+		"@charlietango/use-focus-trap": "^1.2.10",
+		"@date-io/date-fns": "^2.6.2",
+		"@material-ui/core": "^4.10.1",
+		"@material-ui/pickers": "^3.2.10",
+		"@reecelucas/react-datepicker": "^2.0.0",
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.3.2",
+		"@testing-library/user-event": "^7.1.2",
+		"@types/jest": "^24.0.0",
+		"@types/node": "^12.0.0",
+		"@types/react": "^16.9.0",
+		"@types/react-axe": "^3.1.0",
+		"@types/react-dom": "^16.9.0",
+		"@types/react-modal": "^3.10.5",
+		"focus-trap-react": "^6.0.0",
+		"node-sass": "^4.14.1",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"react-focus-lock": "^2.3.1",
+		"react-hook-form": "^5.7.2",
+		"react-scripts": "^3.4.1",
+		"typescript": "~3.7.2"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"react-axe": "^3.4.1"
+	}
 }
